--- a/src/styles/Card3.scss
+++ b/src/styles/Card3.scss
@@ -20,208 +20,228 @@
   box-sizing: border-box;
 }
 
-
 body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    height: 100vh;
-    width: 100vw;
-    background-color: var(--dark-color-lighten);
-    font-family: "Montserrat", sans-serif;
-  }
-a
-{
-    text-decoration: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  height: 100vh;
+  width: 100vw;
+  background-color: var(--dark-color-lighten);
+  font-family: "Montserrat", sans-serif;
 }
+
+.card-wrapper {
+  gap: 40px;
+  flex-wrap: wrap;
+  padding: 20px 0;
+}
+
 .productcard {
-    width: 300px;
-    position: relative;
-    box-shadow: 0 2px 7px #dfdfdf;
-    margin: 5px auto;
-    background: #fafafa;
+  width: 300px;
+  min-height: 450px;
+  position: relative;
+  box-shadow: 0 2px 7px #dfdfdf;
+  background: #fafafa;
+  padding: 25px 0;
 }
 
 .badge {
-    position: absolute;
-    left: 0;
-    top: 20px;
-    text-transform: uppercase;
-    font-size: 13px;
-    font-weight: 700;
-    background: red;
-    color: #fff;
-    padding: 3px 10px;
+  position: absolute;
+  left: 0;
+  top: 20px;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 700;
+  background: red;
+  color: #fff;
+  padding: 3px 10px;
 }
 
 .producttumb {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 300px;
-    padding: 50px;
-    background: #f0f0f0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 300px;
+  padding: 50px;
+  background: #f0f0f0;
 }
 
 .producttumb img {
-    max-width: 100%;
-    max-height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .producttumb img:hover .productImage img {
-    transform: translate(-1.5rem, -7rem) rotate(-20deg);
-  }
+  transform: translate(-1.5rem, -7rem) rotate(-20deg);
+}
 
 .productdetails {
-    padding: 10px;
+  padding: 30px 10px;
 }
 
 .productcatagory {
-    display: block;
-    font-size: 12px;
-    font-weight: 700;
-    text-transform: uppercase;
-    color: #ccc;
-    margin-bottom: 18px;
+  display: block;
+  font-size: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #ccc;
+  margin-bottom: 18px;
 }
 
-.productdetails h4 a {
-    font-weight: 500;
-    display: block;
-    margin-bottom: 18px;
-    text-transform: uppercase;
-    color: #363636;
-    text-decoration: none;
-    transition: 0.3s;
+.productdetails a {
+  font-weight: 500;
+  display: block;
+  margin-bottom: 18px;
+  text-transform: uppercase;
+  color: #363636;
+  text-decoration: none;
+  transition: 0.3s;
 }
 
-.productdetails h4 a:hover {
-    color: #fbb72c;
+.productdetails a:hover {
+  color: #fbb72c;
 }
 
 .productdetails p {
-    font-size: 15px;
-    line-height: 22px;
-    margin-bottom: 18px;
-    color: #999;
+  font-size: 15px;
+  line-height: 22px;
+  margin-bottom: 18px;
+  color: #999;
 }
 
 .productbottomdetails {
-    display: flex;
-    overflow: hidden;
-    border-top: 1px solid #eee;
-    padding-top: 20px;
+  border-top: 1px solid #eee;
+  padding-top: 20px;
+  text-align: center;
+  position: absolute;
+  bottom: 15px;
+  left: 5%;
+  width: 90%;
+
+  & .button {
+    width: 100%;
+  }
 }
 
 .productbottomdetails div {
-    float: left;
-    width: 50%;
+  float: left;
+  width: 50%;
 }
 
 .productprice {
-    font-size: 18px;
-    color: #fbb72c;
-    font-weight: 600;
+  font-size: 18px;
+  color: #fbb72c;
+  font-weight: 600;
+  margin-top: 18px;
 }
 
 .productprice small {
-    font-size: 80%;
-    font-weight: 400;
-    text-decoration: line-through;
-    display: inline-block;
-    margin-right: 5px;
+  font-size: 80%;
+  font-weight: 400;
+  text-decoration: line-through;
+  display: inline-block;
+  margin-right: 5px;
 }
 
 .productlinks {
-    text-align: right;
+  text-align: right;
 }
 
 .productlinks a {
-    display: inline-block;
-    margin-left: 5px;
-    color: #e1e1e1;
-    transition: 0.3s;
-    font-size: 17px;
+  display: inline-block;
+  margin-left: 5px;
+  color: #e1e1e1;
+  transition: 0.3s;
+  font-size: 17px;
 }
 
 .productlinks a:hover {
-    color: #fbb72c;
+  color: #fbb72c;
 }
 
 .buyBtn {
-    background-color: var(--btn);
-    padding: 0.6rem 5.5rem;
-    font-weight: 600;
-    font-size: 1rem;
-    transition: 300ms ease;
-  }
-  .buyBtn:hover {
-    background-color: var(--btn-hover);
-  }
+  background-color: var(--btn);
+  padding: 0.6rem 5.5rem;
+  font-weight: 600;
+  font-size: 1rem;
+  transition: 300ms ease;
+}
 
-  div.cardfan { 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 200px;
-    padding: 50px;
-    width: 66%;
-    margin: 2rem auto;
-    position: relative; 
-  }
-  div.cardfan img { 
-    position: absolute; 
-    width: 100%; 
-    height: auto; 
-    border: 12px solid #ffe; 
-    box-shadow: 4px 4px 3px rgba(0, 0, 0, 0.2); 
-    transform-origin: center 400px; 
-    transition: all 1s linear; 
-  }
-  div.cardfan img:first-child { 
-    transform: rotate(5deg);  
-  }
-  div.cardfan img:last-child { 
-    transform: rotate(-5deg); 
-  }
-  div.cardfan:hover img:first-child { 
-    transform: rotate(15deg); 
-  }
-  div.cardfan:hover img:last-child { 
-    transform: rotate(-15deg);  
-  }
-  
-  img#aqueduct {
-    -webkit-filter: grayscale(100%);
-    filter: grayscale(100%);
-    filter: url(#greyscale);
-    filter: gray;
-  }
-  img#aqueduct:hover {
-    -webkit-filter: grayscale(0);
-    filter: grayscale(0);
-    filter: none;
-  }
-  img#bike {
-    -webkit-filter: sepia(100%);
-    filter: sepia(100%);
-    filter: url(#sepia);
-    background-color: #5E2612;
-    filter: alpha(opacity = 50);
-  }
-  img#bike:hover {
-    -webkit-filter: sepia(0);
-    filter: sepia(0);
-    filter: alpha(opacity = 100);
-    filter: none;
-  }
-  img#roma {
-    -webkit-filter: blur(3px);
-    filter: blur(3px);
-    filter: url(#blur); 
-  }
-  img#roma:hover {
-    -webkit-filter: blur(0px);
-    filter: blur(0px);
-    filter: none;
-  }
+.buyBtn:hover {
+  background-color: var(--btn-hover);
+}
+
+div.cardfan {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
+  width: 100%;
+  position: relative;
+}
+
+div.cardfan img {
+  position: absolute;
+  width: 66%;
+  height: 90%;
+  border: 12px solid #ffe;
+  box-shadow: 4px 4px 3px rgba(0, 0, 0, 0.2);
+  transform-origin: center 400px;
+  transition: all 1s linear;
+}
+
+div.cardfan img:first-child {
+  transform: rotate(5deg);
+}
+
+div.cardfan img:last-child {
+  transform: rotate(-5deg);
+}
+
+div.cardfan:hover img:first-child {
+  transform: rotate(15deg);
+}
+
+div.cardfan:hover img:last-child {
+  transform: rotate(-15deg);
+}
+
+img#aqueduct {
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  filter: url(#greyscale);
+  filter: gray;
+}
+
+img#aqueduct:hover {
+  -webkit-filter: grayscale(0);
+  filter: grayscale(0);
+  filter: none;
+}
+
+img#bike {
+  -webkit-filter: sepia(100%);
+  filter: sepia(100%);
+  filter: url(#sepia);
+  background-color: #5e2612;
+  filter: alpha(opacity=50);
+}
+
+img#bike:hover {
+  -webkit-filter: sepia(0);
+  filter: sepia(0);
+  filter: alpha(opacity=100);
+  filter: none;
+}
+
+img#roma {
+  -webkit-filter: blur(3px);
+  filter: blur(3px);
+  filter: url(#blur);
+}
+
+img#roma:hover {
+  -webkit-filter: blur(0px);
+  filter: blur(0px);
+  filter: none;
+}
