--- a/src/styles/MobileBottomNav.module.scss
+++ b/src/styles/MobileBottomNav.module.scss
@@ -39,6 +39,22 @@
       padding: 7px;
       border-radius: $border-radius;
       cursor: pointer;
+      position: relative;
+
+      & .basketLength {
+        position: absolute;
+        background-color: $white;
+        top: 0;
+        right: 30%;
+        width: 18px;
+        height: 18px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 100%;
+        color: $dark-gray;
+        font-size: 13px;
+      }
     }
   }
 }
